--- a/VideoScroller/VideoScroller.csproj
+++ b/VideoScroller/VideoScroller.csproj
@@ -42,6 +42,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Selenium.Helper\Selenium.Helper.csproj" />
+    <ProjectReference Include="..\SSHClient\SSHClient.csproj" />
   </ItemGroup>
 
   <ItemGroup>
